--- a/static/css/application.css
+++ b/static/css/application.css
@@ -12,7 +12,7 @@ a{
 #stats{width:100%; float:left; padding: 72px 24px; box-sizing: border-box; overflow: hidden; text-align: center;  background-color:rgb(238, 238, 238);}
 #achi{width:100%; float:right;}
 #options{width:80%; padding-left: 0px; text-align: center;}
-#static{position: relative; width: 100%;}
+#static{position: relative; width: 100%; pointer-events: none;}
 #restofpage{background-color:rgb(238, 238, 238); padding: 72px 24px; box-sizing: border-box; overflow: hidden;}
 #achi{width:100%; padding: 72px 24px; text-align: center;}
 #end{background-color:rgb(33, 33, 33); padding: 72px 24px; box-sizing: border-box; overflow: hidden;text-align: center;}
@@ -95,9 +95,10 @@ nav {
 }
 
 #legend {
+    visibility: hidden;
     background: #fff;
     padding: 10px;
-    margin: 10px;
+    margin: 15px;
     margin-top: 50px;
     z-index: 4;
     position: absolute;
@@ -197,4 +198,12 @@ nav {
     width: 100%;
     height: 100%;
     background-image: url('../images/runner_smartwatch.jpg')
+}
+
+#openwarn{
+    position: absolute;
+    z-index: 998;
+    width: 100%;
+    text-align: center;
+    margin-top: 32vh;
 }
